--- a/pages/terms-of-use.mdx
+++ b/pages/terms-of-use.mdx
@@ -1,16 +1,20 @@
-export const pageLayout = "slim";
-import SlimLayout from "../components/layout-slim";
 import heroBgImg from "public/images/heros/blue-lines.jpg";
+import SlimLayout from "../components/layout-slim";
 
 export const meta = {
-  author: "Rich Haines",
   pageTitle: "Terms of Use",
 };
 
-**KeepKey Terms of Service**
+export default ({ children }) => (
+  <SlimLayout meta={meta} heroBgImg={heroBgImg} pageTitle={meta.pageTitle}>
+    {children}
+  </SlimLayout>
+);
 
-Welcome to KeepKey.com which is owned and
-operated by Key Hodlers, LLC (collectively, “KeepKey,” “We,” or “Us”).
+### KeepKey Terms of Service
+
+<br/>
+Welcome to KeepKey.com which is owned and operated by Key Hodlers, LLC (collectively, “KeepKey,” “We,” or “Us”).
 This page explains the terms by which you may access and use KeepKey.com
 and any other product offered by KeepKey (“Websites”) and our online
 and/or mobile services, through which we promote, sell and provide
@@ -28,11 +32,16 @@ Certain services may be subject to additional terms and conditions
 specified by us from time to time, and your use of such services is
 subject to those additional terms and conditions, which are hereby
 incorporated into these Terms by reference.
+<br/>
 
 Please read this agreement carefully to ensure that you understand each provision.
+<br />
 
-1.  Use of Our Service
-2.  **Eligibility.** This is a contract between you and
+### Use of Our Service  
+<br/>
+
+**Eligibility.**  
+    This is a contract between you and
     KeepKey. You must read and agree to these Terms before using the
     Service. If you do not agree, you may not use the Service. You may use
     the Service only if you can form a legally binding contract with
@@ -40,8 +49,11 @@ Please read this agreement carefully to ensure that you understand each provisio
     applicable local, state, national, and international laws, rules and
     regulations. Any use or access to the Service by anyone under 18 is
     strictly prohibited and in violation of these Terms. The Service is not
-    available to any Users previously removed from the Service by KeepKey.
-3.  **KeepKey Service.** The Service allows you to learn
+    available to any Users previously removed from the Service by KeepKey.  
+<br/>
+**KeepKey Service.**
+
+The Service allows you to learn
     about, purchase and submit inquiries for assistance with KeepKey
     products. Subject to these Terms, you are hereby granted a
     non-exclusive, limited, non-transferable, freely revocable license to
@@ -51,7 +63,9 @@ Please read this agreement carefully to ensure that you understand each provisio
     expressly granted herein in the Service and the KeepKey Content (as
     defined below). KeepKey may terminate this license at any time for any
     reason or no reason.
-4.  **Service Rules.** You agree not to engage in any of
+<br/>
+**Service Rules.**  
+You agree not to engage in any of
     the following prohibited activities: (i) modifying, disassembling,
     decompiling or reverse engineering the Service or the KeepKey products;
     (ii) renting, leasing, loaning, reselling, sublicensing, or otherwise
@@ -86,7 +100,9 @@ Please read this agreement carefully to ensure that you understand each provisio
     content or enforce limitations on use of the Service or the content
     therein; or (xv) deleting the copyright and other proprietary rights
     notices.
-5.  **Prohibited Activity.** In connection with your use of the Service, and your interactions with other Users, and third parties
+    <br/>
+**Prohibited Activity.**  
+ In connection with your use of the Service, and your interactions with other Users, and third parties
     you agree and represent you will not engage in any prohibited business
     or prohibited use, as discussed in these Terms of Service (“Prohibited
     Activity”). The list of Prohibited Activities may be updated by KeepKey
@@ -98,29 +114,39 @@ law, regulation, sanctions programs, legal process, or governmental
 request. We reserve the right to block transactions or freeze funds
 immediately and without notice if we determine, in our sole discretion,
 that your Account is associated with a Prohibited Activity.
-
-1.  Purchase of a KeepKey product
-2.  **Cancellations.** You may generally cancel the order
+<br/>
+### Purchase of a KeepKey product
+<br/>
+**Cancellations.**  
+ You may generally cancel the order
     of a KeepKey hardware wallet within 72 hours of purchase. Please see our Customer Support page for more details: [https://keepkey.zendesk.com/hc/en-us](https://keepkey.zendesk.com/hc/en-us).
-3.  **Returns and Refunds.** KeepKey will provide returns and refunds solely in accordance with its policies found on the Customer Support page: [https://keepkey.zendesk.com/hc/en-us](https://keepkey.zendesk.com/hc/en-us).
-4.  **Taxes.** KeepKey is not responsible for, nor can we
+<br/>
+**Returns and Refunds.**  
+KeepKey will provide returns and refunds solely in accordance with its policies found on the Customer Support page: [https://keepkey.zendesk.com/hc/en-us](https://keepkey.zendesk.com/hc/en-us).
+<br/>
+**Taxes.**  
+KeepKey is not responsible for, nor can we
     offer, any specific advice regarding any taxes or customs related fees
     that you may incur or be liable to pay by purchasing a device. It is
     your sole responsibility to determine whether, and to what extent, any
     taxes apply to any transactions you conduct through the Service. For
     more information, please visit the KeepKey Customer Support page: [https://keepkey.zendesk.com/hc/en-us](https://keepkey.zendesk.com/hc/en-us).
-5.  **No Sales to Children.** KeepKey’s Service is not for
+<br/>
+**No Sales to Children.**  
+KeepKey’s Service is not for
     children, but only for adults. If you are under eighteen (18) years of
     age, you may use the Service only with involvement and consent of a
     parent or legal guardian.
-6.  **California Residents.** The provider of services is
+<br/>
+**California Residents.**   The provider of services is
     set forth herein. If you are a California resident, in accordance with
     Cal. Civ. Code §1789.3, you may report complaints to the Complaint
     Assistance Unit of the Division of Consumer Services of the California
     Department of Consumer Affairs by contacting them in writing at 1625
     North Market Blvd., Suite N 112 Sacramento, CA 95834, or by telephone at (800) 952-5210 or (916) 445-1254.
-7.  User Content
-
+<br/>
+### User Content
+<br/>
 We do not claim ownership of user-generated content and material. Any
 and all photographs, articles, images, graphics, videos, sounds, music,
 audio recordings, text, files, profiles, communications, comments,
@@ -161,8 +187,8 @@ Content or respond to any User Content. KeepKey retains the right, in
 its sole discretion and without prior notice, to remove, revise or
 refuse to post any User Content for any reason or no reason. Subject to
 the licenses granted in these Terms, you retain ownership of any
-copyright and other rights you may have in the User Content.
-
+copyright and other rights you may have in the User Content.  
+<br/>
 By submitting or posting User Content on the Service or through any
 tools or applications we provide for posting or sharing your User
 Content with us, you represent and warrant that (a) you own or control
@@ -190,7 +216,7 @@ employees, agents, affiliates, assigns and licensees harmless from any
 and all damages, claims, expenses, costs or fees arising from or in
 connection with a breach of any of the foregoing representations or your
 violation of any law or rights of a third party.
-
+<br/>
 KeepKey does not guarantee the truthfulness, accuracy or reliability
 of any User Content or endorse any opinions expressed by you or anyone
 else. By submitting or posting the User Content you fully and
@@ -214,7 +240,7 @@ KeepKey may investigate the allegation and determine in its sole
 discretion whether to take action in accordance with these Terms.
 KeepKey has no liability or responsibility to Users for performance or
 nonperformance of such activities.
-
+<br/>
 KeepKey has the absolute right to remove and/or delete without notice
 any User Content within its control that it deems objectionable. You
 consent to such removal and/or deletion and waive any claim against
@@ -223,8 +249,8 @@ liable for failure to store posted content or other materials you
 transmit through the Service. You should take measures to preserve
 copies of any data, material, content or information you post on the
 Service or any other sites or platforms.
-
-1.  Our Proprietary Rights
+<br/>
+**Our Proprietary Rights**
 
 Except for your User Content, the Service and all materials therein
 or transferred thereby, including, without limitation, software, images,
@@ -242,7 +268,7 @@ perform, publish, adapt, edit or create derivative works from any
 KeepKey Content, absent specific consent in writing from KeepKey. Use of
 the KeepKey Content for any purpose not expressly permitted by these
 Terms is strictly prohibited.
-
+<br/>
 For the purposes of these Terms, “Intellectual Property Rights” means
 all patent rights, copyright rights, mask work rights, moral rights,
 rights of publicity, trademark, trade dress and service mark rights,
@@ -250,7 +276,7 @@ goodwill, trade secret rights and other intellectual property rights as
 may now exist or hereafter come into existence, and all applications
 therefore and registrations, renewals and extensions thereof, under the
 laws of any state, country, territory or other jurisdiction.
-
+<br/>
 You may choose to or We may invite you to submit comments or ideas
 about the Service, including without limitation about how to improve the
 Service or our products (“Ideas”). By submitting any Ideas, you agree
@@ -262,8 +288,8 @@ otherwise to anyone. You further acknowledge that, by acceptance of your
 submission, KeepKey does not waive any rights to use similar or related
 ideas previously known to KeepKey, or developed by its employees, or
 obtained from sources other than you.
-
-1.  Privacy
+<br/>
+**Privacy**
 
 KeepKey respects the privacy of its users by not requesting any
 information that is unnecessary for the use of the Service or to comport
@@ -283,8 +309,8 @@ collected, used, transferred to and processed in the United States. By
 accepting these Terms, you expressly allow us to export data outside of
 the jurisdiction in which you reside or are located when you access the
 Website and our Services.
-
-1.  Security
+<br/>
+**Security**
 
 KeepKey cares about the integrity and security of your personal
 information, and stores all personal information provided by users in an
@@ -292,8 +318,8 @@ encrypted fashion. However, we cannot guarantee that unauthorized third
 parties will never be able to defeat our security measures or use your
 personal information for improper purposes. You acknowledge that you
 provide your personal information at your own risk.
-
-1.  Third-Party Links and Information
+<br/>
+**Third-Party Links and Information**
 
 The Service may contain links to third-party materials that are not
 owned or controlled by KeepKey. KeepKey does not endorse or assume any
@@ -311,8 +337,8 @@ goods, and any other terms (such as warranties) are solely between you
 and such advertisers. You agree that KeepKey shall not be responsible
 for any loss or damage of any sort relating to your dealings with such
 advertisers.
-
-1.  Suspension, Termination and Cancellation
+<br/>
+**Suspension, Termination and Cancellation**
 
 We may, without prior notice, suspend the Service, change the
 Service; stop providing the Service or features of the Service, to you
@@ -349,8 +375,8 @@ confidential criteria that are essential to KeepKey’s risk management
 and security protocols. You agree that KeepKey is under no obligation to
 disclose the details of its risk management and security procedures to
 you.
-
-1.  Indemnity
+<br/>
+**Indemnity**
 
 You agree to defend, indemnify and hold harmless KeepKey and its
 subsidiaries, agents, licensors, managers, and other affiliated
@@ -369,8 +395,8 @@ without limitation misleading, false, or inaccurate information; (f)
 your willful misconduct; or (g) any other party’s access and use of the
 Service with your unique username, password or other appropriate
 security code.
-
-1.  No Warranty
+<br/>
+**No Warranty**
 
 The Service is provided on an “as is” and “as available” basis. Use
 of the Service is at your own risk. To the maximum extent permitted by
@@ -390,25 +416,25 @@ obtained through the use of the Service is downloaded at your own risk
 and you will be solely responsible for any damage to your computer
 system or mobile device or loss of data that results from such download
 or your use of the Service.
-
+<br/>
 KeepKey does not warrant, endorse, guarantee, or assume
 responsibility for any product or service advertised or offered by a
 third party through the Service or any hyperlinked website or service,
 and KeepKey will not be a party to or in any way monitor any transaction
 between you and third-party providers of products or services.
-
+<br/>
 Federal law, some states, provinces and other jurisdictions do not
 allow the exclusion and limitations of certain implied warranties, so
 the above exclusions may not apply to you. This agreement gives you
 specific legal rights, and you may also have other rights which vary
 from state to state. The disclaimers and exclusions under this agreement
 will not apply to the extent prohibited by applicable law.
-
+<br/>
 For more information on warranties associated with physical KeepKey
 products, please visit our Customer Support Center by clicking the
 following link: [https://keepkey.zendesk.com/hc/en-us](https://keepkey.zendesk.com/hc/en-us).
-
-1.  Limitation of Liability
+<br/>
+**Limitation of Liability**
 
 To the maximum extent permitted by applicable law, in no event shall
 KeepKey, its affiliates, agents, directors, employees, suppliers or
@@ -420,7 +446,7 @@ service. Under no circumstances will KeepKey be responsible for any
 damage, loss or injury resulting from hacking, tampering or other
 unauthorized access or use of the Service or your account or the
 information contained therein.
-
+<br/>
 To the maximum extent permitted by applicable law, KeepKey assumes no
 liability or responsibility for any (a) errors, mistakes, or
 inaccuracies of content; (b) personal injury or property damage, of any
@@ -439,13 +465,13 @@ liable to you for any claims, proceedings, liabilities, obligations,
 damages, losses or costs in an amount exceeding the amount you paid to
 KeepKey hereunder or one hundred U.S. dollars (USD $100.00), whichever
 is greater.
-
+<br/>
 This limitation of liability section applies whether the alleged
 liability is based on contract, tort, negligence, strict liability, or
 any other basis, even if KeepKey has been advised of the possibility of
 such damage. The foregoing limitation of liability shall apply to the
 fullest extent permitted by law in the applicable jurisdiction.
-
+<br/>
 Some states or jurisdictions do not allow the exclusion or limitation
 of incidental or consequential damages, so the above limitations or
 exclusions may not apply to you. This agreement gives you specific legal
@@ -453,9 +479,11 @@ rights, and you may also have other rights which vary from state to
 state or jurisdiction. The disclaimers, exclusions, and limitations of
 liability under this agreement will not apply to the extent prohibited
 by applicable law.
-
-1.  Governing Law, Arbitration
-2.  **Governing Law.** These Terms shall be governed by the internal substantive laws of the State of Delaware, without respect to
+<br/>
+### Governing Law, Arbitration
+<br/>
+**Governing Law.**  
+These Terms shall be governed by the internal substantive laws of the State of Delaware, without respect to
     its conflict of laws principles, except to the extent Delaware state law is preempted by federal law. Notwithstanding the preceding sentences
     with respect to the substantive law, any arbitration conducted pursuant
     to the terms of these Terms shall be governed by the applicable rules of arbitration in the State of Delaware. You agree to submit to the
@@ -470,7 +498,9 @@ by applicable law.
     the State of Delaware is the proper forum for any appeals of an
     arbitration award or for trial court proceedings in the event that the
     arbitration provision below is found to be unenforceable.
-3.  **Arbitration.** Read this section carefully because it requires the parties to arbitrate their disputes and limits the manner
+<br/>
+**Arbitration.**  
+ Read this section carefully because it requires the parties to arbitrate their disputes and limits the manner
     in which you can seek relief from KeepKey. For any dispute with KeepKey, you agree to first contact us at [https://keepkey.zendesk.com/hc/en-us](https://keepkey.zendesk.com/hc/en-us) and attempt to resolve the dispute with us informally. In the unlikely
     event that KeepKey has not been able to resolve a dispute it has with
     you after sixty (60) days, we each agree to resolve any claim, dispute,
@@ -497,12 +527,19 @@ by applicable law.
     from the courts as necessary to prevent the actual or threatened
     infringement, misappropriation, or violation of our data security,
     Intellectual Property Rights or other proprietary rights.
-4.  General
-5.  **Assignment.** These Terms, and any rights and
+  
+<br/>
+### General
+<br/>
+**Assignment.**  
+These Terms, and any rights and
     licenses granted hereunder, may not be transferred or assigned by you,
     but may be assigned by KeepKey without restriction. Any attempted
     transfer or assignment in violation hereof shall be null and void.
-6.  **Notification Procedures and Changes to these Terms.** KeepKey may provide notifications, whether such notifications are required by
+<br/>
+**Notification Procedures and Changes to these Terms.** 
+
+KeepKey may provide notifications, whether such notifications are required by
     law or are for marketing or other business related purposes, to you via
     email notice, written or hard copy notice, or through posting of such
     notice on our website, as determined by KeepKey in our sole discretion.
@@ -516,7 +553,9 @@ by applicable law.
     changes have been made to these Terms. Your continued use of the Service after any such change constitutes your acceptance of the new Terms of
     Service. If you do not agree to any of these terms or any future Terms
     of Service, do not use or access (or continue to access) the Service.
-7.  **Entire Agreement/Severability.** These Terms,
+<br/>
+**Entire Agreement/Severability.**  
+These Terms,
     together with any additional terms, amendments and any additional
     agreements you may enter into with KeepKey in connection with the
     Service, shall constitute the entire agreement between you and KeepKey
@@ -524,18 +563,11 @@ by applicable law.
     invalid by a court of competent jurisdiction, the invalidity of such
     provision shall not affect the validity of the remaining provisions of
     these Terms, which shall remain in full force and effect.
-8.  **No Waiver.** No waiver of any term of these Terms
+<br/>
+**No Waiver.**  
+ No waiver of any term of these Terms
     shall be deemed a further or continuing waiver of such term or any other term, and KeepKey’s failure to assert any right or provision under
     these Terms shall not constitute a waiver of such right or provision.
-9.  **Contact.** Please contact us by submitting a request to us at [https://keepkey.zendesk.com/hc/en-us/requests/new](https://keepkey.zendesk.com/hc/en-us/requests/new) with any questions regarding these Terms.
-
-export default ({ children }) => (
-   <SlimLayout 
-      meta={meta}
-      
-   >
-
-      {children}
-
-   </SlimLayout>
-);
+<br/>
+**Contact.** 
+ Please contact us by submitting a request to us at [https://keepkey.zendesk.com/hc/en-us/requests/new](https://keepkey.zendesk.com/hc/en-us/requests/new) with any questions regarding these Terms.
